feat: create getting events for user
